--- a/index.html
+++ b/index.html
@@ -56,12 +56,78 @@
   </nav>
 
   <!-- Header -->
-  <div class="row" style="height: 20px;" id="page-top"></div>
+  <div class="row" style="height: 40px;" id="page-top"></div>
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <img src="img/coffee punch.png" alt="" class="rounded-0">
     <span class="site-heading-upper text-primary mb-3">Fresh Roasted Coffee Beans</span>
     <span class="site-heading-lower">Coffee Punch</span>
   </h1>
+
+  <!-- New arrival -->
+  <section class="page-section cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <!-- Header -->
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Coffee Beans</span>
+              <span class="section-heading-lower">New Arrival</span>
+            </h2>
+            <!-- Item deck -->
+            <div class="card-deck">
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">耶加雪菲 杜梅索 G1 日曬 0.5lb</a>
+                  </h4>
+                  <h5>$350</h5>
+                  <p class="card-text">葡萄、甜橙與桃子果乾 、可可，香氣飽滿、乾淨、濃郁厚實口感</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
+                  </h4>
+                  <h5>$315</h5>
+                  <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
+                  </h4>
+                  <h5>$350</h5>
+                  <p class="card-text">花香、蜂蜜甜、佛手柑、清新莓果調、櫻桃，餘韻細緻、油脂滑膩
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ★</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Main section -->
   <section class="page-section clearfix">
@@ -82,83 +148,10 @@
       </div>
     </div>
   </section>
-
+  
+  <!-- Best seller -->
   <section class="page-section cta">
     <div class="container">
-      <!-- New arrival row -->
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <div class="cta-inner text-center rounded">
-            <!-- Header -->
-            <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Coffee Beans</span>
-              <span class="section-heading-lower">New Arrival</span>
-            </h2>
-            <!-- Item row -->
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="https://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">耶加雪菲 杜梅索 G1 日曬</a>
-                    </h4>
-                    <h5>$300/0.5lb</h5>
-                    <p class="card-text">葡萄、甜橙與桃子果乾 、可可，香氣飽滿、乾淨、濃郁厚實口感</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ☆</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
-                    </h4>
-                    <h5>$320/0.5lb</h5>
-                    <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ☆</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="https://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
-                    </h4>
-                    <h5>$350/100g</h5>
-                    <p class="card-text">花香、蜂蜜甜、佛手柑、清新莓果調、櫻桃，餘韻細緻、油脂滑膩
-                    </p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ★</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Dummy row -->
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <p></p>
-        </div>
-      </div>
-      <!-- Best seller row -->
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
@@ -167,57 +160,51 @@
               <span class="section-heading-upper">Coffee Beans</span>
               <span class="section-heading-lower">Best Seller</span>
             </h2>
-            <!-- Item row -->
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">哥倫比亞 娜玲瓏 青山特選 水洗</a>
-                    </h4>
-                    <h5>$300/0.5lb</h5>
-                    <p class="card-text">青蘋果，多汁，明亮且溫潤的酸質，酸甜平衡，菸草，黑巧克力，尾韻甜度持久</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ☆</small>
-                  </div>
+            <!-- Item deck -->
+            <div class="card-deck">
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">哥倫比亞 娜玲瓏 青山特選 水洗</a>
+                  </h4>
+                  <h5>$350</h5>
+                  <p class="card-text">青蘋果，多汁，明亮且溫潤的酸質，酸甜平衡，菸草，黑巧克力，尾韻甜度持久</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">哥倫比亞 薇拉省 水洗</a>
-                    </h4>
-                    <h5>$250/0.5lb</h5>
-                    <p class="card-text">核果味、香草、菸草、黑巧克力餘韻、豐富焦糖，口感濃郁</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ☆</small>
-                  </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">哥倫比亞 薇拉省 Supremo 水洗</a>
+                  </h4>
+                  <h5>$250</h5>
+                  <p class="card-text">核果味、香草、菸草、黑巧克力餘韻、豐富焦糖，口感濃郁</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#">
-                    <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
-                  </a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
-                    </h4>
-                    <h5>$320/0.5lb</h5>
-                    <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">★ ★ ★ ★ ☆</small>
-                  </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">蘇門答臘 亞齊省 曼特寧三次手選</a>
+                  </h4>
+                  <h5>$315</h5>
+                  <p class="card-text">鮮切杉木、奶油、烤杏仁、甘草、黑巧克力、口感 厚實</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
                 </div>
               </div>
             </div>
@@ -241,7 +228,7 @@
                 <span class="section-heading-lower">About Coffee Punch</span>
               </h2>
               <p class="mb-0">「Coffee Punch」來自交大一群熱愛咖啡的年輕人。</p>
-			  <p class="mb-0">我們生產新鮮烘焙咖啡豆，追求咖啡風味的香醇平衡。</p>
+              <p class="mb-0">我們生產新鮮烘焙咖啡豆，追求咖啡風味的香醇平衡。</p>
             </div>
           </div>
         </div>
@@ -262,7 +249,8 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://placehold.it/900x700?text=Products" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://placehold.it/900x700?text=Products"
+          alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">我們對咖啡豆的生產萬分自豪，以熱忱又嚴謹的態度選豆、挑豆、烘焙。我們保證能讓你沖煮的每杯咖啡都值得細細品嘗。</p>
@@ -272,6 +260,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer text-faded text-center py-5">
     <div class="container">
       <p class="m-0 small">Copyright &copy; Coffee Punch 2018</p>
