--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
+  <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap core CSS -->
@@ -56,12 +56,126 @@
     </div>
   </nav>
 
-  <div class="row" style="height: 20px;" id="page-top"></div>
+  <!-- Header -->
+  <div class="row" style="height: 40px;" id="page-top"></div>
   <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <img src="img/coffee punch.png" alt="" class="rounded-0">
     <span class="site-heading-upper text-primary mb-3">Fresh Roasted Coffee Beans</span>
     <span class="site-heading-lower">Coffee Punch</span>
   </h1>
 
+  <!-- Now Available -->
+  <section class="page-section cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <!-- Header -->
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Coffee Beans</span>
+              <span class="section-heading-lower">Now Available</span>
+            </h2>
+            <!-- Item columns -->
+            <div class="card-columns">
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">耶加雪菲 杜梅索 G1 日曬 0.5lb</a>
+                  </h4>
+                  <h5>$350</h5>
+                  <p class="card-text">葡萄、甜橙與桃子果乾 、可可，香氣飽滿、乾淨、濃郁厚實口感</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
+                  </h4>
+                  <h5>$315</h5>
+                  <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
+                  </h4>
+                  <h5>$350</h5>
+                  <p class="card-text">花香、蜂蜜甜、佛手柑、清新莓果調、櫻桃，餘韻細緻、油脂滑膩
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ★</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">哥倫比亞 娜玲瓏 青山特選 水洗</a>
+                  </h4>
+                  <h5>$350</h5>
+                  <p class="card-text">青蘋果，多汁，明亮且溫潤的酸質，酸甜平衡，菸草，黑巧克力，尾韻甜度持久</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">哥倫比亞 薇拉省 Supremo 水洗</a>
+                  </h4>
+                  <h5>$250</h5>
+                  <p class="card-text">核果味、香草、菸草、黑巧克力餘韻、豐富焦糖，口感濃郁</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+              <div class="card h-100">
+                <a href="#">
+                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="#">蘇門答臘 亞齊省 曼特寧三次手選</a>
+                  </h4>
+                  <h5>$315</h5>
+                  <p class="card-text">鮮切杉木、奶油、烤杏仁、甘草、黑巧克力、口感 厚實</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">★ ★ ★ ★ ☆</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer class="footer text-faded text-center py-5">
     <div class="container">
       <p class="m-0 small">Copyright &copy; Coffee Punch 2018</p>
