--- a/store.html
+++ b/store.html
@@ -78,12 +78,9 @@
             <!-- Item columns -->
             <div class="card-columns">
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">耶加雪菲 杜梅索 G1 日曬 0.5lb</a>
+                    <a href="#">耶加雪菲 杜梅索 G1 日曬</a>
                   </h4>
                   <h5>$350</h5>
                   <p class="card-text">葡萄、甜橙與桃子果乾 、可可，香氣飽滿、乾淨、濃郁厚實口感</p>
@@ -93,9 +90,6 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
@@ -108,12 +102,9 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
+                    <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗 100g</a>
                   </h4>
                   <h5>$350</h5>
                   <p class="card-text">花香、蜂蜜甜、佛手柑、清新莓果調、櫻桃，餘韻細緻、油脂滑膩
@@ -124,9 +115,6 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">哥倫比亞 娜玲瓏 青山特選 水洗</a>
@@ -139,9 +127,6 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">哥倫比亞 薇拉省 Supremo 水洗</a>
@@ -154,9 +139,6 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">蘇門答臘 亞齊省 曼特寧三次手選</a>
