--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="「Coffee Punch」來自交大一群熱愛咖啡的年輕人。咖啡就像人，每一杯都有著不同的個性，帶著不同的故事。而我們就深深的被咖啡所吸引，並追尋著更美好的咖啡體驗。">
+  <meta name="author" content="Fei-fan He @ Coffee Punch">
+  <meta name="keywords" content="咖啡,咖啡豆,coffee,coffee bean,自烘,自家烘焙,新鮮烘焙">
 
   <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -77,12 +78,12 @@
             <!-- Item deck -->
             <div class="card-deck">
               <div class="card h-100">
-                <a href="#">
+                <!--<a href="#">
                   <img class="card-img-top" src="https://placehold.it/250x250?text=Yirgacheffe+Natural" alt="">
-                </a>
+                </a>-->
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">耶加雪菲 杜梅索 G1 日曬 0.5lb</a>
+                    <a href="store.html">耶加雪菲 杜梅索 G1 日曬</a>
                   </h4>
                   <h5>$350</h5>
                   <p class="card-text">葡萄、甜橙與桃子果乾 、可可，香氣飽滿、乾淨、濃郁厚實口感</p>
@@ -92,12 +93,9 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">西達摩 吉吉莎處理廠 G1 水洗</a>
+                    <a href="store.html">西達摩 吉吉莎處理廠 G1 水洗</a>
                   </h4>
                   <h5>$315</h5>
                   <p class="card-text">甜桃，花香調混和蜜柑的香氣，養樂多酸甜搭上綠茶口感，中溫口感越趨柔軟滑口，尾段甜蜜細緻</p>
@@ -107,12 +105,9 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Panama+Geisha+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
+                    <a href="store.html">巴拿馬 翡翠莊園 藍標藝妓 水洗</a>
                   </h4>
                   <h5>$350</h5>
                   <p class="card-text">花香、蜂蜜甜、佛手柑、清新莓果調、櫻桃，餘韻細緻、油脂滑膩
@@ -139,7 +134,8 @@
             <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
             <span class="section-heading-lower">值得您的品味</span>
           </h2>
-          <p class="mb-3">嚴格把關生豆、烘焙，精挑細選每一顆咖啡豆，追求最高品質的嗅味覺感受。如果還沒體驗過「咖啡衝擊」，一定要試試我們的產品！
+          <p class="mb-3">
+			我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力。投入時間修正烘焙手法，追求更香醇平衡的感受。
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="store.html">開始選購！</a>
@@ -163,12 +159,9 @@
             <!-- Item deck -->
             <div class="card-deck">
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">哥倫比亞 娜玲瓏 青山特選 水洗</a>
+                    <a href="store.html">哥倫比亞 娜玲瓏 青山特選 水洗</a>
                   </h4>
                   <h5>$350</h5>
                   <p class="card-text">青蘋果，多汁，明亮且溫潤的酸質，酸甜平衡，菸草，黑巧克力，尾韻甜度持久</p>
@@ -178,12 +171,9 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Colombia+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">哥倫比亞 薇拉省 Supremo 水洗</a>
+                    <a href="store.html">哥倫比亞 薇拉省 Supremo 水洗</a>
                   </h4>
                   <h5>$250</h5>
                   <p class="card-text">核果味、香草、菸草、黑巧克力餘韻、豐富焦糖，口感濃郁</p>
@@ -193,12 +183,9 @@
                 </div>
               </div>
               <div class="card h-100">
-                <a href="#">
-                  <img class="card-img-top" src="https://placehold.it/250x250?text=Sidamo+Washed" alt="">
-                </a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="#">蘇門答臘 亞齊省 曼特寧三次手選</a>
+                    <a href="store.html">蘇門答臘 亞齊省 曼特寧三次手選</a>
                   </h4>
                   <h5>$315</h5>
                   <p class="card-text">鮮切杉木、奶油、烤杏仁、甘草、黑巧克力、口感 厚實</p>
@@ -227,8 +214,19 @@
                 <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
                 <span class="section-heading-lower">About Coffee Punch</span>
               </h2>
-              <p class="mb-0">「Coffee Punch」來自交大一群熱愛咖啡的年輕人。</p>
-              <p class="mb-0">我們生產新鮮烘焙咖啡豆，追求咖啡風味的香醇平衡。</p>
+              <p>
+				「Coffee Punch」來自交大一群熱愛咖啡的年輕人。<br/>
+				咖啡就像人，每一杯都有著不同的個性，帶著不同的故事，<br/>
+				而我們就深深的被咖啡所吸引，並追尋著更美好的咖啡體驗。
+			  </p>
+              <p>
+				我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力，<br/>
+				投入時間修正烘焙手法，追求更香醇且平衡的嗅、味覺感受。
+			  </p>
+              <p class="mb-0">
+				如果您也和我們一樣，喜歡自己動手玩咖啡、對咖啡風味非常要求，<br/>
+				「Coffee Punch」的咖啡豆絕對值得您的嘗試！
+			  </p>
             </div>
           </div>
         </div>
