--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 				投入時間修正烘焙手法，追求更香醇且平衡的嗅、味覺感受。
 			  </p>
               <p class="mb-0">
-				如果您也和我們一樣，喜歡自己動手玩咖啡、對咖啡風味非常要求，<br/>
-				「Coffee Punch」的咖啡豆絕對值得您的嘗試！
+				如果您也和我們一樣，喜歡自己動手玩咖啡、對風味非常要求，<br/>
+				不妨體驗一下「咖啡衝擊」吧！
 			  </p>
             </div>
           </div>
