--- a/store.html
+++ b/store.html
@@ -5,8 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="「Coffee Punch」來自交大一群熱愛咖啡的年輕人。咖啡就像人，每一杯都有著不同的個性，帶著不同的故事。而我們就深深的被咖啡所吸引，並追尋著更美好的咖啡體驗。">
+  <meta name="author" content="Fei-fan He @ Coffee Punch">
+  <meta name="keywords" content="咖啡,咖啡豆,coffee,coffee bean,自烘,自家烘焙,新鮮烘焙">
 
   <title>Coffee Punch - Fresh Roasted Coffee Beans</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -22,6 +23,16 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.css" rel="stylesheet">
 
+  <!--  Facebook JavaScript SDK -->
+  <script>
+    (function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = 'https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.12&appId=327326287319900&autoLogAppEvents=1';
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+  </script>
 </head>
 
 <body>
@@ -64,6 +75,30 @@
     <span class="site-heading-lower">Coffee Punch</span>
   </h1>
 
+  <!-- Contact -->
+  <section class="page-section cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <!-- Header -->
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Contact</span>
+              <span class="section-heading-lower">訂購我們的產品</span>
+            </h2>
+            <p>請詢問 Facebook 粉絲專業</p>
+			<div class="fb-page" data-href="https://www.facebook.com/coffeepunch.tw" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+				<blockquote cite="https://www.facebook.com/coffeepunch.tw" class="fb-xfbml-parse-ignore">
+					<a href="https://www.facebook.com/coffeepunch.tw">Coffee Punch</a>
+				</blockquote>
+			</div>
+            <p>或以 e-mail 與我們聯繫：service@coffeepunch.net</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   <!-- Now Available -->
   <section class="page-section cta">
     <div class="container">
@@ -168,6 +203,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  
 </body>
 
 </html>
