--- a/store.html
+++ b/store.html
@@ -29,7 +29,7 @@
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) return;
 	  js = d.createElement(s); js.id = id;
-	  js.src = 'https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.12&appId=327326287319900&autoLogAppEvents=1';
+	  js.src = 'https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.12&appId=1632936430117100&autoLogAppEvents=1';
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));
   </script>
@@ -86,7 +86,7 @@
               <span class="section-heading-upper">Contact</span>
               <span class="section-heading-lower">訂購我們的產品</span>
             </h2>
-            <p>請詢問 Facebook 粉絲專業</p>
+            <p>請詢問 Facebook 粉絲專頁</p>
 			<div class="fb-page" data-href="https://www.facebook.com/coffeepunch.tw" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
 				<blockquote cite="https://www.facebook.com/coffeepunch.tw" class="fb-xfbml-parse-ignore">
 					<a href="https://www.facebook.com/coffeepunch.tw">Coffee Punch</a>
