--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <span class="section-heading-lower">值得您的品味</span>
           </h2>
           <p class="mb-3">
-			我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力。投入時間修正烘焙手法，追求更香醇平衡的感受。
+            我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力。投入時間修正烘焙手法，追求更香醇平衡的感受。
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="store.html">開始選購！</a>
@@ -144,7 +144,7 @@
       </div>
     </div>
   </section>
-  
+
   <!-- Best seller -->
   <section class="page-section cta">
     <div class="container">
@@ -215,18 +215,18 @@
                 <span class="section-heading-lower">About Coffee Punch</span>
               </h2>
               <p>
-				「Coffee Punch」來自交大一群熱愛咖啡的年輕人。<br/>
-				咖啡就像人，每一杯都有著不同的個性，帶著不同的故事，<br/>
-				而我們就深深的被咖啡所吸引，並追尋著更美好的咖啡體驗。
-			  </p>
+                「Coffee Punch」來自交大一群熱愛咖啡的年輕人。
+                <br/> 咖啡就像人，每一杯都有著不同的個性，帶著不同的故事，
+                <br/> 而我們就深深的被咖啡所吸引，並追尋著更美好的咖啡體驗。
+              </p>
               <p>
-				我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力，<br/>
-				投入時間修正烘焙手法，追求更香醇且平衡的嗅、味覺感受。
-			  </p>
+                我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力，
+                <br/> 投入時間修正烘焙手法，追求更香醇且平衡的嗅、味覺感受。
+              </p>
               <p class="mb-0">
-				如果您也和我們一樣，喜歡自己動手玩咖啡、對風味非常要求，<br/>
-				不妨體驗一下「咖啡衝擊」吧！
-			  </p>
+                如果您也和我們一樣，喜歡自己動手玩咖啡、對風味非常要求，
+                <br/> 不妨體驗一下「咖啡衝擊」吧！
+              </p>
             </div>
           </div>
         </div>
@@ -247,11 +247,12 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://placehold.it/900x700?text=Products"
-          alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">我們對咖啡豆的生產萬分自豪，以熱忱又嚴謹的態度選豆、挑豆、烘焙。我們保證能讓你沖煮的每杯咖啡都值得細細品嘗。</p>
+            <p class="mb-0">
+              我們對咖啡豆的生產萬分自豪，以熱忱又嚴謹的態度選豆、挑豆、烘焙。
+              <br/> 「Coffee Punch」的咖啡豆都值得您細細品嘗。</p>
           </div>
         </div>
       </div>
