--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">新鮮烘焙咖啡豆</span>
-            <span class="section-heading-lower">值得您的品味</span>
+            <span class="section-heading-lower">什麼才是好咖啡？</span>
           </h2>
           <p class="mb-3">
-            我們細心挑選生豆的來源，研究單品咖啡豆的風味潛力。投入時間修正烘焙手法，追求更香醇平衡的感受。
+            是否偶而會喝到又澀又苦的黑咖啡？好咖啡應該帶來舒服的香醇甜！想找順口好喝的咖啡，歡迎來試試我們的咖啡豆！
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="store.html">開始選購！</a>
+            <a class="btn btn-primary btn-xl" href="store.html">進來逛逛！</a>
           </div>
         </div>
       </div>
